<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/viewBackground"
    tools:context="com.android.nanodegree.jrobbins.myportfolioapp.MainActivity">

    <LinearLayout
        style="@style/centerLayout"
        android:orientation="vertical">

        <TextView
            style="@style/headerText"
            android:text="@string/ui_my_nanodegree_apps" />

        <Button
            android:id="@+id/popular_movies"
            style="@style/projectButton"
            android:onClick="onProjectBtnClicked"
            android:text="@string/btn_popular_movies" />

        <Button
            android:id="@+id/stock_hawk"
            style="@style/projectButton"
            android:onClick="onProjectBtnClicked"
            android:text="@string/btn_stock_hawk" />

        <Button
            android:id="@+id/build_it_bigger"
            style="@style/projectButton"
            android:onClick="onProjectBtnClicked"
            android:text="@string/btn_build_it_bigger" />

        <Button
            android:id="@+id/make_your_app_material"
            style="@style/projectButton"
            android:onClick="onProjectBtnClicked"
            android:text="@string/btn_make_your_app_material" />

        <Button
            android:id="@+id/go_ubiquitous"
            style="@style/projectButton"
            android:onClick="onProjectBtnClicked"
            android:text="@string/btn_go_ubiquitous" />

        <Button
            android:id="@+id/capstone"
            style="@style/projectButton"
            android:onClick="onProjectBtnClicked"
            android:text="@string/btn_capstone" />

    </LinearLayout>
</RelativeLayout>
